source/build/generated-src/antlr/main/ca/waterloo/dsg/graphflow/grammar/GraphflowParser.java
// Generated from ca/waterloo/dsg/graphflow/grammar/Graphflow.g4 by ANTLR 4.7
package ca.waterloo.dsg.graphflow.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GraphflowParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		QuotedCharacter=1, QuotedString=2, Comment=3, MATCH=4, CONTINUOUSLY=5, 
		EXPLAIN=6, CREATE=7, DELETE=8, SHORTEST=9, PATH=10, WEIGHTS=11, WGHT=12, 
		WHERE=13, RETURN=14, COUNT=15, AVG=16, MAX=17, MIN=18, SUM=19, ACTION=20, 
		IN=21, UDF=22, JAR=23, LOAD=24, SAVE=25, FROM=26, TO=27, DIR=28, TRUE=29, 
		FALSE=30, AND=31, OR=32, ON=33, FILE=34, SPACE=35, TAB=36, CARRIAGE_RETURN=37, 
		LINE_FEED=38, FORM_FEED=39, BACKSPACE=40, VERTICAL_TAB=41, STAR=42, DASH=43, 
		UNDERSCORE=44, DOT=45, FORWARD_SLASH=46, BACKWARD_SLASH=47, SEMICOLON=48, 
		COLON=49, COMMA=50, SINGLE_QUOTE=51, DOUBLE_QUOTE=52, UNARY_OR=53, OPEN_ROUND_BRACKET=54, 
		CLOSE_ROUND_BRACKET=55, OPEN_CURLY_BRACKET=56, CLOSE_CURLY_BRACKET=57, 
		OPEN_SQUARE_BRACKET=58, CLOSE_SQUARE_BRACKET=59, EQUAL_TO=60, NOT_EQUAL_TO=61, 
		LESS_THAN=62, GREATER_THAN=63, LESS_THAN_OR_EQUAL=64, GREATER_THAN_OR_EQUAL=65, 
		Characters=66, Digits=67;
	public static final int
		RULE_graphflow = 0, RULE_statement = 1, RULE_query = 2, RULE_matchQuery = 3, 
		RULE_continuousMatchQuery = 4, RULE_explainMatchQuery = 5, RULE_explainContinuousMatchQuery = 6, 
		RULE_createQuery = 7, RULE_deleteQuery = 8, RULE_shortestPathQuery = 9, 
		RULE_continuousShortestPathQuery = 10, RULE_durabilityQuery = 11, RULE_matchPattern = 12, 
		RULE_deletePattern = 13, RULE_createEdgePattern = 14, RULE_createVertexPattern = 15, 
		RULE_pathPattern = 16, RULE_returnClause = 17, RULE_aggregationPattern = 18, 
		RULE_aggregationFunction = 19, RULE_countStarPattern = 20, RULE_whereClause = 21, 
		RULE_weightsClause = 22, RULE_predicates = 23, RULE_predicate = 24, RULE_operand = 25, 
		RULE_variableEdge = 26, RULE_digitsEdgeWithOptionalType = 27, RULE_digitsEdgeWithTypeAndProperties = 28, 
		RULE_digitsVertex = 29, RULE_digitsVertexWithTypeAndProperties = 30, RULE_variableVertex = 31, 
		RULE_edgeType = 32, RULE_edgeTypeAndOptionalProperties = 33, RULE_edgeVariable = 34, 
		RULE_variableWithProperty = 35, RULE_weight = 36, RULE_type = 37, RULE_properties = 38, 
		RULE_property = 39, RULE_literal = 40, RULE_fileSink = 41, RULE_udfCall = 42, 
		RULE_operator = 43, RULE_key = 44, RULE_functionName = 45, RULE_variable = 46, 
		RULE_keyword = 47, RULE_whitespace = 48, RULE_numericLiteral = 49, RULE_integerLiteral = 50, 
		RULE_doubleLiteral = 51, RULE_booleanLiteral = 52, RULE_stringLiteral = 53;
	public static final String[] ruleNames = {
		"graphflow", "statement", "query", "matchQuery", "continuousMatchQuery", 
		"explainMatchQuery", "explainContinuousMatchQuery", "createQuery", "deleteQuery", 
		"shortestPathQuery", "continuousShortestPathQuery", "durabilityQuery", 
		"matchPattern", "deletePattern", "createEdgePattern", "createVertexPattern", 
		"pathPattern", "returnClause", "aggregationPattern", "aggregationFunction", 
		"countStarPattern", "whereClause", "weightsClause", "predicates", "predicate", 
		"operand", "variableEdge", "digitsEdgeWithOptionalType", "digitsEdgeWithTypeAndProperties", 
		"digitsVertex", "digitsVertexWithTypeAndProperties", "variableVertex", 
		"edgeType", "edgeTypeAndOptionalProperties", "edgeVariable", "variableWithProperty", 
		"weight", "type", "properties", "property", "literal", "fileSink", "udfCall", 
		"operator", "key", "functionName", "variable", "keyword", "whitespace", 
		"numericLiteral", "integerLiteral", "doubleLiteral", "booleanLiteral", 
		"stringLiteral"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "'*'", "'-'", "'_'", "'.'", "'/'", 
		"'\\'", "';'", "':'", "','", "'''", "'\"'", "'|'", "'('", "')'", "'{'", 
		"'}'", "'['", "']'", "'='", "'<>'", "'<'", "'>'", "'<='", "'>='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "QuotedCharacter", "QuotedString", "Comment", "MATCH", "CONTINUOUSLY", 
		"EXPLAIN", "CREATE", "DELETE", "SHORTEST", "PATH", "WEIGHTS", "WGHT", 
		"WHERE", "RETURN", "COUNT", "AVG", "MAX", "MIN", "SUM", "ACTION", "IN", 
		"UDF", "JAR", "LOAD", "SAVE", "FROM", "TO", "DIR", "TRUE", "FALSE", "AND", 
		"OR", "ON", "FILE", "SPACE", "TAB", "CARRIAGE_RETURN", "LINE_FEED", "FORM_FEED", 
		"BACKSPACE", "VERTICAL_TAB", "STAR", "DASH", "UNDERSCORE", "DOT", "FORWARD_SLASH", 
		"BACKWARD_SLASH", "SEMICOLON", "COLON", "COMMA", "SINGLE_QUOTE", "DOUBLE_QUOTE", 
		"UNARY_OR", "OPEN_ROUND_BRACKET", "CLOSE_ROUND_BRACKET", "OPEN_CURLY_BRACKET", 
		"CLOSE_CURLY_BRACKET", "OPEN_SQUARE_BRACKET", "CLOSE_SQUARE_BRACKET", 
		"EQUAL_TO", "NOT_EQUAL_TO", "LESS_THAN", "GREATER_THAN", "LESS_THAN_OR_EQUAL", 
		"GREATER_THAN_OR_EQUAL", "Characters", "Digits"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Graphflow.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GraphflowParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class GraphflowContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GraphflowParser.EOF, 0); }
		public List<WhitespaceContext> whitespace() {
			return getRuleContexts(WhitespaceContext.class);
		}
		public WhitespaceContext whitespace(int i) {
			return getRuleContext(WhitespaceContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(GraphflowParser.SEMICOLON, 0); }
		public GraphflowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_graphflow; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphflowListener ) ((GraphflowListener)listener).enterGraphflow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphflowListener ) ((GraphflowListener)listener).exitGraphflow(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphflowVisitor ) return ((GraphflowVisitor<? extends T>)visitor).visitGraphflow(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GraphflowContext graphflow() throws RecognitionException {
		GraphflowContext _localctx = new GraphflowContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_graphflow);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Comment) | (1L << SPACE) | (1L << TAB) | (1L << CARRIAGE_RETURN) | (1L << LINE_FEED) | (1L << FORM_FEED))) != 0)) {
				{
				setState(108);
				whitespace();
				}
			}

			setState(111);
			statement();
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Comment) | (1L << SPACE) | (1L << TAB) | (1L << CARRIAGE_RETURN) | (1L << LINE_FEED) | (1L << FORM_FEED))) != 0)) {
				{
				setState(112);
				whitespace();
				}
			}

			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(115);
				match(SEMICOLON);
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Comment) | (1L << SPACE) | (1L << TAB) | (1L << CARRIAGE_RETURN) | (1L << LINE_FEED) | (1L << FORM_FEED))) != 0)) {
					{
					setState(116);
					whitespace();
					}
				}

				}
			}

			setState(121);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphflowListener ) ((GraphflowListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphflowListener ) ((GraphflowListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphflowVisitor ) return ((GraphflowVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			query();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public MatchQueryContext matchQuery() {
			return getRuleContext(MatchQueryContext.class,0);
		}
		public ContinuousMatchQueryContext continuousMatchQuery() {
			return getRuleContext(ContinuousMatchQueryContext.class,0);
		}
		public ExplainMatchQueryContext explainMatchQuery() {
			return getRuleContext(ExplainMatchQueryContext.class,0);
		}
		public ExplainContinuousMatchQueryContext explainContinuousMatchQuery() {
			return getRuleContext(ExplainContinuousMatchQueryContext.class,0);
		}
		public CreateQueryContext createQuery() {
			return getRuleContext(CreateQueryContext.class,0);
		}
		public DeleteQueryContext deleteQuery() {
			return getRuleContext(DeleteQueryContext.class,0);
		}
		public ShortestPathQueryContext shortestPathQuery() {
			return getRuleContext(ShortestPathQueryContext.class,0);
		}
		public ContinuousShortestPathQueryContext continuousShortestPathQuery() {
			return getRuleContext(ContinuousShortestPathQueryContext.class,0);
		}
		public DurabilityQueryContext durabilityQuery() {
			return getRuleContext(DurabilityQueryContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphflowListener ) ((GraphflowListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphflowListener ) ((GraphflowListener)listener).exitQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphflowVisitor ) return ((GraphflowVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_query);
		try {
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				matchQuery();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				continuousMatchQuery();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(127);
				explainMatchQuery();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(128);
				explainContinuousMatchQuery();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(129);
				createQuery();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(130);
				deleteQuery();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(131);
				shortestPathQuery();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(132);
				continuousShortestPathQuery();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(133);
				durabilityQuery();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MatchQueryContext extends ParserRuleContext {
		public TerminalNode MATCH() { return getToken(GraphflowParser.MATCH, 0); }
		public List<WhitespaceContext> whitespace() {
			return getRuleContexts(WhitespaceContext.class);
		}
		public WhitespaceContext whitespace(int i) {
			return getRuleContext(WhitespaceContext.class,i);
		}
		public MatchPatternContext matchPattern() {
			return getRuleContext(MatchPatternContext.class,0);
		}
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public ReturnClauseContext returnClause() {
			return getRuleContext(ReturnClauseContext.class,0);
		}
		public MatchQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphflowListener ) ((GraphflowListener)listener).enterMatchQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphflowListener ) ((GraphflowListener)listener).exitMatchQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphflowVisitor ) return ((GraphflowVisitor<? extends T>)visitor).visitMatchQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchQueryContext matchQuery() throws RecognitionException {
		MatchQueryContext _localctx = new MatchQueryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_matchQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(MATCH);
			setState(137);
			whitespace();
			setState(138);
			matchPattern();
			setState(142);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(139);
				whitespace();
				setState(140);
				whereClause();
				}
				break;
			}
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(144);
				whitespace();
				setState(145);
				returnClause();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContinuousMatchQueryContext extends ParserRuleContext {
		public TerminalNode CONTINUOUSLY() { return getToken(GraphflowParser.CONTINUOUSLY, 0); }
		public List<WhitespaceContext> whitespace() {
			return getRuleContexts(WhitespaceContext.class);
		}
		public WhitespaceContext whitespace(int i) {
			return getRuleContext(WhitespaceContext.class,i);
		}
		public TerminalNode MATCH() { return getToken(GraphflowParser.MATCH, 0); }
		public MatchPatternContext matchPattern() {
			return getRuleContext(MatchPatternContext.class,0);
		}
		public FileSinkContext fileSink() {
			return getRuleContext(FileSinkContext.class,0);
		}
		public UdfCallContext udfCall() {
			return getRuleContext(UdfCallContext.class,0);
		}
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public ContinuousMatchQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_continuousMatchQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphflowListener ) ((GraphflowListener)listener).enterContinuousMatchQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphflowListener ) ((GraphflowListener)listener).exitContinuousMatchQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphflowVisitor ) return ((GraphflowVisitor<? extends T>)visitor).visitContinuousMatchQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContinuousMatchQueryContext continuousMatchQuery() throws RecognitionException {
		ContinuousMatchQueryContext _localctx = new ContinuousMatchQueryContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_continuousMatchQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(CONTINUOUSLY);
			setState(150);
			whitespace();
			setState(151);
			match(MATCH);
			setState(152);
			whitespace();
			setState(153);
			matchPattern();
			setState(157);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(154);
				whitespace();
				setState(155);
				whereClause();
				}
				break;
			}
			setState(159);
			whitespace();
			setState(162);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FILE:
				{
				setState(160);
				fileSink();
				}
				break;
			case ACTION:
				{
				setState(161);
				udfCall();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExplainMatchQueryContext extends ParserRuleContext {
		public TerminalNode EXPLAIN() { return getToken(GraphflowParser.EXPLAIN, 0); }
		public WhitespaceContext whitespace() {
			return getRuleContext(WhitespaceContext.class,0);
		}
		public MatchQueryContext matchQuery() {
			return getRuleContext(MatchQueryContext.class,0);
		}
		public ExplainMatchQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_explainMatchQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphflowListener ) ((GraphflowListener)listener).enterExplainMatchQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphflowListener ) ((GraphflowListener)listener).exitExplainMatchQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphflowVisitor ) return ((GraphflowVisitor<? extends T>)visitor).visitExplainMatchQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExplainMatchQueryContext explainMatchQuery() throws RecognitionException {
		ExplainMatchQueryContext _localctx = new ExplainMatchQueryContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_explainMatchQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(EXPLAIN);
			setState(165);
			whitespace();
			setState(166);
			matchQuery();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
